{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 310,
  "lineage": "200e4454-2619-62e5-f76d-c47d7add40e8",
  "resources": [
    {
      "module": "module.aws_cust",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:649302246490:instance/i-0e20b7d57ca88fa93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e20b7d57ca88fa93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b75edaaedd2b664",
            "private_dns": "ip-172-31-22-195.us-east-2.compute.internal",
            "private_ip": "172.31.22.195",
            "public_dns": "ec2-18-118-82-86.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.82.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dbe738c90f6a3d1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ac3af3d1",
            "tags": {
              "Name": "dev-Terraform"
            },
            "tags_all": {
              "Name": "dev-Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-2afde660"
            ]
          },
          "dependencies": [
            "module.aws_cust.aws_key_pair.deployer",
            "module.aws_cust.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.azure_cust",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/networkInterfaces/dev-nic",
            "internal_domain_name_suffix": "4ioo015i15cuhksazlgpycflsg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/publicIPAddresses/dev-pip",
                "subnet_id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "dev-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "dev-resources"
          },
          "dependencies": [
            "module.azure_cust.azurerm_public_ip.main",
            "module.azure_cust.azurerm_resource_group.main",
            "module.azure_cust.azurerm_subnet.internal",
            "module.azure_cust.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_cust",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/publicIPAddresses/dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.97.244.70",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dev-pip",
            "resource_group_name": "dev-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_cust.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_cust",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "dev-resources",
            "virtual_network_name": "dev-network"
          },
          "dependencies": [
            "module.azure_cust.azurerm_resource_group.main",
            "module.azure_cust.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_cust",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "6fed1cf2-dfe8-43c5-aa40-caccfc08ab96",
            "id": "/subscriptions/77d4478e-38cb-43dc-a5ba-049a62cc7c37/resourceGroups/dev-resources/providers/Microsoft.Network/virtualNetworks/dev-network",
            "location": "westeurope",
            "name": "dev-network",
            "resource_group_name": "dev-resources",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.azure_cust.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_cust",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.93.209.50",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-06T01:31:34.578-07:00",
            "id": "projects/numeric-chassis-328203/regions/asia-south1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "numeric-chassis-328203",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/regions/asia-south1/addresses/vm-public-address"
          },
          "dependencies": [
            "module.gcp_cust.google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "module": "module.gcp_cust",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-06T01:31:22.013-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/numeric-chassis-328203/global/firewalls/dev-firewall-externalssh",
            "log_config": [],
            "name": "dev-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/global/networks/default",
            "priority": 1000,
            "project": "numeric-chassis-328203",
            "self_link": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/global/firewalls/dev-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gcp_cust",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-06T01:31:22.012-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/numeric-chassis-328203/global/firewalls/dev-webserver",
            "log_config": [],
            "name": "dev-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/global/networks/default",
            "priority": 1000,
            "project": "numeric-chassis-328203",
            "self_link": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/global/firewalls/dev-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gcp_cust",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210916",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/zones/asia-south1-a/disks/dev-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/numeric-chassis-328203/zones/asia-south1-a/instances/dev-vm",
            "instance_id": "2161285064769462298",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "narahari:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCuhY7UEAy6iql+57W/tdQgxO9L2rhbRrvvpEaDdoWe9U60s/a8o7IgdN9hSxP/TZAIRmj0tMauZk6VSvT1Cof7qrRWhRF8hnUiiROgjDa1o9yZtM9zp+DDloHnqLxFYRBkGzQGI5NCPEyqXkGcUXK+1zwtlFRq/s7SIvOYP+pf4QtEIRuGfOxm8NfoLIIWi8FtB2IduOYE4tdEJZ4O9YKifltknNL2J0J2T6Nknvu88NRqMsJ6O+BpPU7bZzLK2ld7NlRsk7NTnKTnDetDSyw1Yr5V3TDqJzMJL3PyjjtKTRynXQ/s7GlZa4naOdjjRk2bH9cbz2muhrBcwfe8Y0FyesAi/KWuf/j+AWDcdRR4dmpGg8CeggW6wjGMGipSiqZzdXk/XfcKboLPqtoP35ltdRxW2jTyQOjdEFNNErzf [...]
            },
            "metadata_fingerprint": "W7uuyH2t_nw=",
            "name": "dev-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.209.50",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/global/networks/default",
                "network_ip": "10.160.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "numeric-chassis-328203"
              }
            ],
            "project": "numeric-chassis-328203",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/numeric-chassis-328203/zones/asia-south1-a/instances/dev-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "module.gcp_cust.google_compute_address.static",
            "module.gcp_cust.google_compute_firewall.firewall",
            "module.gcp_cust.google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}